--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "fetch": "node scripts/fetch-videos.js",
     "dev": "python -m http.server 8000",
-    "build": "npm run fetch"
+    "build": "npm run fetch && node scripts/generate-posthog-config.js"
   },
   "dependencies": {
     "axios": "^1.6.0"
