--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "fetch": "node scripts/fetch-videos.js",
     "fetch-archive": "node scripts/fetch-archive-2025.js",
     "dev": "python3 -m http.server 8000 -d public",
-    "build": "npm run fetch"
+    "build": "npm run fetch",
+    "validate-calendar": "node scripts/validate-calendar.js"
   },
   "dependencies": {
     "axios": "^1.6.0"
