--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "validate-calendar": "node scripts/validate-calendar.js"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.13.2"
   },
-  "devDependencies": {},
-  "keywords": ["formula1", "youtube", "static-site"],
+  "keywords": [
+    "formula1",
+    "youtube",
+    "static-site"
+  ],
   "author": "",
   "license": "MIT"
 }
