--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fetch": "node scripts/fetch-videos.js",
     "fetch-archive": "node scripts/fetch-archive-2025.js",
     "dev": "npx -y serve public -p 8000",
-    "build": "npm run fetch",
+    "build": "if [ -n \"$YOUTUBE_API_KEY\" ]; then npm run fetch; else echo \"Skipping video fetch: YOUTUBE_API_KEY not set. Using committed public/data/*.json.\"; fi",
     "validate-calendar": "node scripts/validate-calendar.js"
   },
   "dependencies": {
