--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "fetch": "node scripts/fetch-videos.js",
     "fetch-archive": "node scripts/fetch-archive-2025.js",
-    "dev": "python3 -m http.server 8000 -d public",
-    "build": "npm run fetch",
+    "dev": "npx -y serve public -p 8000",
+    "build": "if [ -n \"$YOUTUBE_API_KEY\" ]; then npm run fetch; else echo \"Skipping video fetch: YOUTUBE_API_KEY not set. Using committed public/data/*.json.\"; fi",
     "validate-calendar": "node scripts/validate-calendar.js"
   },
   "dependencies": {
